이미지를 추가함

--- a/_posts/2023-05-17-first.md
+++ b/_posts/2023-05-17-first.md
@@ -5,32 +5,7 @@ title:  "첫 포스팅 입니다!"
 # 오늘 첫 블로그 만들었습니다
 # 열심히 해 보겠습니다
 
-### asdklfj;lkdns;lv\\
-
-* 호섭이
-
-        막;ㅣㅜㄴㅇ리ㅏㅜㅊㅌㅋ;ㅣ푸
 
 
-1. ㅁ니아ㅜㄹ;ㅣㅏㅜㅋ
+![PNU_Mark](D:\kwonBK0223.github.io\KwonBK0223.github.io\images\2023-05-17-first\PNU_Mark.png)
 
-
-$y=f(x)$
-
-$\alpha$
-
-$\varSigma$
-
-    호섭아 일좀하자
-
-    ㅁㄴㅇㄹ
-    ㅁㄴㅇㄹ
-    ㅁㄴㅇㄹ
-    ㅁㄴㅇㄹ
-    ㅁㄴㅇㄹ
-    ㅁㄴㄹㅇ
-    ㅁㄴㅇ
-    ㄻㄴㅇ
-    ㄻㄹㅇㄴ
-
-    ㄸㄸㄸ
