이미지 테스트

--- a/_posts/2023-05-17-first.md
+++ b/_posts/2023-05-17-first.md
@@ -7,5 +7,6 @@ title:  "첫 포스팅 입니다!"
 
 
 
-![PNU_Mark](D:\kwonBK0223.github.io\KwonBK0223.github.io\images\2023-05-17-first\PNU_Mark.png)
 
+
+![example](D:\kwonBK0223.github.io\KwonBK0223.github.io\images\2023-05-17-first\example.JPG)
