--- a/_posts/2023-05-17-first.md
+++ b/_posts/2023-05-17-first.md
@@ -7,4 +7,8 @@ title:  "첫 포스팅 입니다!"
 
 
 
-![9.loss_graph]({{site.url}}\images\2023-05-17-first\9.loss_graph.PNG)![example]({{site.url}}/images/2023-05-17-first/example-1684392308982-3.JPG)
+![9.loss_graph]({{site.url}}\images\2023-05-17-first\9.loss_graph.PNG)
+
+![example]({{site.url}}/images/2023-05-17-first/example-1684392308982-3.JPG)
+
+![1.split]({{site.url}}\images\2023-05-17-first\1.split.PNG)
