--- a/_posts/2023-05-17-first.md
+++ b/_posts/2023-05-17-first.md
@@ -1,6 +1,7 @@
 ---
 layout: single
 title:  "첫 포스팅 입니다!"
+typora-root-url: ../
 ---
 # 오늘 첫 블로그 만들었습니다
 # 열심히 해 보겠습니다
@@ -13,4 +14,4 @@ title:  "첫 포스팅 입니다!"
 
 ![1.split](/images/2023-05-17-first/1.split.PNG)
 
-![7.fit](/images/2023-05-17-first/7.fit-1684394592637-14.PNG)
+![5.convert](/images/2023-05-17-first/5.convert.PNG)![7.fit](/images/2023-05-17-first/7.fit-1684394592637-14.PNG)
