--- a/_posts/2023-05-17-first.md
+++ b/_posts/2023-05-17-first.md
@@ -15,3 +15,5 @@ typora-root-url: ../
 ![1.split](/images/2023-05-17-first/1.split.PNG)
 
 ![5.convert](/images/2023-05-17-first/5.convert.PNG)![7.fit](/images/2023-05-17-first/7.fit-1684394592637-14.PNG)
+
+![PNU_Mark](/images/2023-05-17-first/PNU_Mark-1684394827514-18.png)
