--- a/_posts/2023-05-17-test.md
+++ b/_posts/2023-05-17-test.md
@@ -1,3 +1,7 @@
+layout: single
+title:  "테스트용 페이지입니다"
+typora-root-url: ../
+
 # 2023.02.01 
 
 # Start
@@ -12,8 +16,10 @@ print("Todya :",len(today))
 print("Total :",len(total))
 ```
 
-    Todya : 12
-    Total : 12
+```python
+Todya : 12
+Total : 12
+```
 
 
 # 2023.02.02  
